--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.414.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.0.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "tailwind-variants": "^0.2.1"
